@@ -54,6 +54,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|HashSet
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|LinkedList
 import|;
 end_import
@@ -65,6 +75,16 @@ operator|.
 name|util
 operator|.
 name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
 import|;
 end_import
 
@@ -217,6 +237,22 @@ operator|.
 name|util
 operator|.
 name|SimpleOrderedMap
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|util
+operator|.
+name|StrUtils
 import|;
 end_import
 
@@ -507,6 +543,11 @@ specifier|private
 name|PluginInfo
 name|shfInfo
 decl_stmt|;
+DECL|field|core
+specifier|private
+name|SolrCore
+name|core
+decl_stmt|;
 DECL|method|getDefaultComponents
 specifier|protected
 name|List
@@ -672,6 +713,262 @@ name|SolrCore
 name|core
 parameter_list|)
 block|{
+name|this
+operator|.
+name|core
+operator|=
+name|core
+expr_stmt|;
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|missing
+init|=
+operator|new
+name|HashSet
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|c
+init|=
+operator|(
+name|List
+argument_list|<
+name|String
+argument_list|>
+operator|)
+name|initArgs
+operator|.
+name|get
+argument_list|(
+name|INIT_COMPONENTS
+argument_list|)
+decl_stmt|;
+name|missing
+operator|.
+name|addAll
+argument_list|(
+name|core
+operator|.
+name|getSearchComponents
+argument_list|()
+operator|.
+name|checkContains
+argument_list|(
+name|c
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|first
+init|=
+operator|(
+name|List
+argument_list|<
+name|String
+argument_list|>
+operator|)
+name|initArgs
+operator|.
+name|get
+argument_list|(
+name|INIT_FIRST_COMPONENTS
+argument_list|)
+decl_stmt|;
+name|missing
+operator|.
+name|addAll
+argument_list|(
+name|core
+operator|.
+name|getSearchComponents
+argument_list|()
+operator|.
+name|checkContains
+argument_list|(
+name|first
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|last
+init|=
+operator|(
+name|List
+argument_list|<
+name|String
+argument_list|>
+operator|)
+name|initArgs
+operator|.
+name|get
+argument_list|(
+name|INIT_LAST_COMPONENTS
+argument_list|)
+decl_stmt|;
+name|missing
+operator|.
+name|addAll
+argument_list|(
+name|core
+operator|.
+name|getSearchComponents
+argument_list|()
+operator|.
+name|checkContains
+argument_list|(
+name|last
+argument_list|)
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|!
+name|missing
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+literal|"Missing SearchComponents named : "
+operator|+
+name|missing
+argument_list|)
+throw|;
+if|if
+condition|(
+name|c
+operator|!=
+literal|null
+operator|&&
+operator|(
+name|first
+operator|!=
+literal|null
+operator|||
+name|last
+operator|!=
+literal|null
+operator|)
+condition|)
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+literal|"First/Last components only valid if you do not declare 'components'"
+argument_list|)
+throw|;
+if|if
+condition|(
+name|shfInfo
+operator|==
+literal|null
+condition|)
+block|{
+name|shardHandlerFactory
+operator|=
+name|core
+operator|.
+name|getCoreDescriptor
+argument_list|()
+operator|.
+name|getCoreContainer
+argument_list|()
+operator|.
+name|getShardHandlerFactory
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
+name|shardHandlerFactory
+operator|=
+name|core
+operator|.
+name|createInitInstance
+argument_list|(
+name|shfInfo
+argument_list|,
+name|ShardHandlerFactory
+operator|.
+name|class
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|core
+operator|.
+name|addCloseHook
+argument_list|(
+operator|new
+name|CloseHook
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|void
+name|preClose
+parameter_list|(
+name|SolrCore
+name|core
+parameter_list|)
+block|{
+name|shardHandlerFactory
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|void
+name|postClose
+parameter_list|(
+name|SolrCore
+name|core
+parameter_list|)
+block|{         }
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+DECL|method|initComponents
+specifier|private
+name|void
+name|initComponents
+parameter_list|()
+block|{
 name|Object
 name|declaredComponents
 init|=
@@ -832,8 +1129,12 @@ literal|false
 expr_stmt|;
 block|}
 comment|// Build the component list
+name|List
+argument_list|<
+name|SearchComponent
+argument_list|>
 name|components
-operator|=
+init|=
 operator|new
 name|ArrayList
 argument_list|<>
@@ -843,7 +1144,7 @@ operator|.
 name|size
 argument_list|()
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 name|DebugComponent
 name|dbgCmp
 init|=
@@ -934,84 +1235,12 @@ name|dbgCmp
 argument_list|)
 expr_stmt|;
 block|}
-if|if
-condition|(
-name|shfInfo
-operator|==
-literal|null
-condition|)
-block|{
-name|shardHandlerFactory
+name|this
+operator|.
+name|components
 operator|=
-name|core
-operator|.
-name|getCoreDescriptor
-argument_list|()
-operator|.
-name|getCoreContainer
-argument_list|()
-operator|.
-name|getShardHandlerFactory
-argument_list|()
+name|components
 expr_stmt|;
-block|}
-else|else
-block|{
-name|shardHandlerFactory
-operator|=
-name|core
-operator|.
-name|createInitInstance
-argument_list|(
-name|shfInfo
-argument_list|,
-name|ShardHandlerFactory
-operator|.
-name|class
-argument_list|,
-literal|null
-argument_list|,
-literal|null
-argument_list|)
-expr_stmt|;
-name|core
-operator|.
-name|addCloseHook
-argument_list|(
-operator|new
-name|CloseHook
-argument_list|()
-block|{
-annotation|@
-name|Override
-specifier|public
-name|void
-name|preClose
-parameter_list|(
-name|SolrCore
-name|core
-parameter_list|)
-block|{
-name|shardHandlerFactory
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|void
-name|postClose
-parameter_list|(
-name|SolrCore
-name|core
-parameter_list|)
-block|{         }
-block|}
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 DECL|method|getComponents
 specifier|public
@@ -1022,6 +1251,31 @@ argument_list|>
 name|getComponents
 parameter_list|()
 block|{
+if|if
+condition|(
+name|components
+operator|==
+literal|null
+condition|)
+block|{
+synchronized|synchronized
+init|(
+name|this
+init|)
+block|{
+if|if
+condition|(
+name|components
+operator|==
+literal|null
+condition|)
+block|{
+name|initComponents
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+block|}
 return|return
 name|components
 return|;
@@ -1042,6 +1296,15 @@ parameter_list|)
 throws|throws
 name|Exception
 block|{
+if|if
+condition|(
+name|components
+operator|==
+literal|null
+condition|)
+name|getComponents
+argument_list|()
+expr_stmt|;
 name|ResponseBuilder
 name|rb
 init|=
